--- a/css/app.css
+++ b/css/app.css
@@ -2122,19 +2122,35 @@ body.qr-body {
   max-width: 1024px;
   margin: auto;
   display: block;
-  padding-top: 6px;
+  padding-top: 0px;
+  height: 62px;
+}
+
+.qr-body header .header-container>span {
+  display: inline-block;
+  text-align: center;
+  color: #202121;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 62px;
+  width: 100%;
+  margin-top: 0px;
+  padding-top: 0px;
 }
 
 .qr-body header .header-container .header-img-container {
   display: inline;
+  position: absolute;
+  right: 22px;
+  top: 12px;
 }
 
 .qr-body header .header-container .header-img-container a {
   text-decoration: none;
   color: #fff;
   display: inline-block;
-  width: 48px;
-  height: 48px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -2147,19 +2163,86 @@ body.qr-body {
   background-color: #0088cc;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 42px;
-  margin-bottom: 42px;
+  margin-top: 48px;
+  margin-bottom: 48px;
   max-width: 1024px;
-  height: calc(100% - 238px);
+  height: calc(100% - 247px);
+  position: relative;
+}
+
+.qr-body .main-content .sub-title {
+  position: absolute;
+  overflow: hidden;
+  height: 58px;
+  z-index: 50;
+  width: 78%;
+  right: 32px;
+  top: 32px;
+}
+
+.qr-body .main-content .sub-title .sub-title-container {
+  position: absolute;
+  height: 50px;
+  width: calc(100% - 8px);
+  background: #fff;
+  margin-left: 4px;
+  z-index: 50;
+  -webkit-box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .14), 0 6px 10px 0 rgba(0, 0, 0, .098), 0 1px 18px 0 rgba(0, 0, 0, .084);
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .14), 0 6px 10px 0 rgba(0, 0, 0, .098), 0 1px 18px 0 rgba(0, 0, 0, .084);
+}
+.qr-body .main-content .sub-title .sub-title-container span.contact_link:hover{
+  cursor: pointer;
+  border: 1px solid #0088cc;
+  background: #0088cc;
+  color: #ffffff;
+}
+
+.qr-body .main-content .sub-title .sub-title-container span.contact_link {
+  position: absolute;
+  display: inline-block;
+  border: 1px solid #0088cc;
+  border-radius: 16px;
+  height: 30px;
+  width: 88px;
+  line-height: 30px;
+  text-align: center;
+  color: #0088cc;
+  font-size: 13px;
+  font-weight: 500;
+  right: 28px;
+  top: 8px;
+  cursor: pointer;
+}
+.qr-body .main-content .sub-title .sub-title-container span.contact_text{
+  float: right;
+  color: #202121;
+  line-height: 48px;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+  width: 182px;
+}
+.qr-body .main-content .sub-title a:hover {
+  color: #006ea5;
+}
+
+.qr-body .main-content .sub-title a {
+  text-decoration: none;
+  color: #202121;
+  line-height: 48px;
+  padding: 0px 12px 0px 32px;
+  font-size: 14px;
+  font-weight: 400;
+  float: left;
 }
 
 .qr-body .main-content .sub-section {
   background-color: #ffffff;
   display: inline-block;
-  margin-top: 48px;
-  margin-left: 48px;
-  width: calc(100% - 48px);
-  height: calc(100% - 48px);
+  margin-top: 32px;
+  margin-left: 32px;
+  width: calc(100% - 32px);
+  height: calc(100% - 32px);
 }
 
 .qr-body .main-content .sub-section .qr-form-page {
@@ -2179,7 +2262,7 @@ body.qr-body {
   width: 50%;
   height: 100%;
   position: relative;
-  padding-top: 98px;
+  padding-top: 128px;
 }
 
 .qr-body .main-content .sub-section .qr-form-page .qr-form-container .qr-form-right {
@@ -2202,9 +2285,8 @@ body.qr-body {
 
 .qr-form-right .white-bg {
   position: absolute;
-  width: 288px;
+  width: 70%;
   background: #ffffff;
-  position: absolute;
   top: -48px;
   height: 48px;
   right: 0px;
@@ -2223,6 +2305,11 @@ body.qr-body {
   top: 0px;
 }
 
+.qr-body #hamburger-menu:hover span {
+  background-color: #006ea5;
+}
+
+
 .qr-body #hamburger-menu {
   top: 16px;
   left: 20px;
@@ -2230,7 +2317,27 @@ body.qr-body {
 
 .qr-body #hamburger-menu span {
   background-color: #333333;
+  height: 2px;
+  width: 20px;
+}
 
+.qr-body #hamburger-menu.open span:nth-child(1),
+.qr-body #hamburger-menu.fakeopen span:nth-child(1) {
+  top: 6px;
+  left: 3px;
+}
+
+.qr-body #hamburger-menu span:nth-child(2) {
+  top: 14px;
+}
+
+.qr-body #hamburger-menu span:nth-child(3) {
+  top: 20px;
+}
+
+.qr-body #hamburger-menu.open span:nth-child(3),
+.qr-body #hamburger-menu.fakeopen span:nth-child(3) {
+  left: 3px;
 }
 
 .qr-body #hamburger-menu.open {
@@ -2238,25 +2345,66 @@ body.qr-body {
 }
 
 .qr-body .header-content .menu-content {
-  background: #f4f7f6;
+  background: #f0f0f0;
+}
+
+.qr-body .header-content .menu-content ul li>a:hover {
+  background: #ffffff;
+  cursor: pointer;
+  color: #0088cc;
+  outline: none;
 }
 
 .qr-body .header-content .menu-content ul li>a {
   font-size: 18px;
-  font-weight: bold;
   position: relative;
   display: block;
-  padding: 24px 36px;
-  font-weight: bold;
+  font-weight: 400;
   color: #202121;
   cursor: pointer;
-  background: #f4f7f6;
+  background: #f0f0f0;
   border-bottom: 1px solid #E6EAEA;
   transition: background 0.3s ease-in-out, border 0.3s ease-in-out, color 0.3s ease-in-out;
+  height: 48px;
+  line-height: 48px;
+  padding-left: 68px;
+  padding: 12px 10px 12px 66px;
+}
+
+.qr-body #hamburger-menu.open>p {
+  display: none;
+}
+
+.qr-body #hamburger-menu:hover>p {
+  color: #006ea5;
+}
+
+.qr-body #hamburger-menu>p {
+  color: #333333;
+  font-size: 10px;
+  left: 42px;
+  top: -5px;
+  position: absolute;
+  text-transform: uppercase;
+}
+
+.qr-body .header-content .menu-content {
+  top: 0px;
+}
+
+.qr-body .header-content .menu-content ul li {
+  text-decoration: none;
+  color: #fff;
+  width: 100%;
+}
+
+.qr-body .header-content .menu-content ul {
+  width: 100%;
+  left: 0px;
 }
 
 .qr-body .main-content .sub-section h2 {
-  font-size: 20px;
+  font-size: 16px;
   color: rgb(51, 51, 51);
   font-weight: 600;
   margin-top: 38px;
@@ -2273,7 +2421,7 @@ body.qr-body {
   color: #ffffff;
   position: absolute;
   left: calc(50% - 25px);
-  top: 50px;
+  top: 88px;
   border-radius: 50%;
 }
 
@@ -2290,7 +2438,7 @@ body.qr-body {
   transition: box-shadow .08s ease-in, color .08s ease-in, -webkit-box-shadow .08s ease-in;
   color: #303030;
   border: 0;
-  border-radius: 6px;
+  border-radius: 3px;
   background: #fff;
   -webkit-box-shadow: 0 0 0 1px rgba(50, 50, 93, .1), 0 2px 5px 0 rgba(50, 50, 93, .05), 0 1px 1px 0 rgba(0, 0, 0, .05);
   box-shadow: 0 0 0 1px rgba(50, 50, 93, .1), 0 2px 5px 0 rgba(50, 50, 93, .05), 0 1px 1px 0 rgba(0, 0, 0, .05);
@@ -2333,7 +2481,7 @@ body.qr-body {
   width: calc(100% - 64px);
   margin-left: 32px;
   margin-right: 32px;
-  border-radius: 6px;
+  border-radius: 3px;
   font-weight: 400;
   letter-spacing: 0.75px;
   -webkit-box-shadow: 0 0 0 1px rgba(50, 50, 93, .1), 0 2px 5px 0 rgba(50, 50, 93, .05), 0 1px 1px 0 rgba(0, 0, 0, .05);
@@ -2345,7 +2493,7 @@ body.qr-body {
 
 .qr-form-left>p {
   font-size: 13px;
-  color: #5f5f5f;
+  color: rgba(32, 33, 33, 0.67);
   text-align: center;
   line-height: 16px;
   padding-left: 48px;
