--- a/css/app.css
+++ b/css/app.css
@@ -1671,15 +1671,15 @@ body.qr-body {
 
 .qr-form-right .form-img-container .qr-img-sub {
   display: block;
-    width: 200px;
-    height: 200px;
-    margin: auto;
-    background: transparent;
-    overflow: hidden;
-    position: absolute;
-    top: calc(50% - 100px);
-    left: calc(50% - 100px);
-    z-index: 502;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  background: transparent;
+  overflow: hidden;
+  position: absolute;
+  top: calc(50% - 100px);
+  left: calc(50% - 100px);
+  z-index: 502;
 }
 
 .qr-form-right .form-img-container>img {
@@ -2010,6 +2010,7 @@ body.qr-body {
   #hamburger-menu.open span:nth-child(3),
   #hamburger-menu.fakeopen span:nth-child(3) {
     top: 25px;
+    left: 2px;
   }
 
   #profile.profile {
@@ -2173,17 +2174,20 @@ body.qr-body {
   }
 
   .header-content .menu-content {
-    width: 160px;
+    width: 260px;
   }
 
   .header-content .menu-content ul {
-    left: 52px;
+    left: 62px;
     top: 72px;
   }
 
   .header-content .menu-content ul li>a {
     font-size: 18px;
-    line-height: 52px;
+    line-height: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: inline-block;
   }
 
   #portfolio::before {
@@ -2284,9 +2288,13 @@ body.qr-body {
   .qr-body .main-content .sub-section .qr-form-page .qr-form-container .qr-form-right {
     display: none;
   }
+
   .qr-body .main-content {
     min-height: 700px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
+
   .qr-body .main-content .sub-section {
     width: calc(100% - 60px);
   }
@@ -2309,6 +2317,22 @@ body.qr-body {
 
   .qr-body .header-content .menu-content {
     width: 260px;
+  }
+
+  .qr-body #hamburger-menu.open span:nth-child(1),
+  .qr-body #hamburger-menu.fakeopen span:nth-child(1) {
+    top: 6px;
+    left: 3px;
+  }
+
+  .qr-body #hamburger-menu.open span:nth-child(3),
+  .qr-body #hamburger-menu.fakeopen span:nth-child(3) {
+    left: 3px;
+    top: 20px;
+  }
+
+  .qr-body #hamburger-menu>p {
+    display: none;
   }
 }
 
